--- a/src/app/components/weather-detail/weather-detail.component.html
+++ b/src/app/components/weather-detail/weather-detail.component.html
@@ -1,5 +1,15 @@
-<div>
-  <div *ngFor="let i of forecast">
-    Day: {{i.dt_txt | date}}
-  </div>
+<div class="container" *ngIf="forecast else loading">
+    <!-- <div *ngFor="let i of forecast">
+      Day: {{i.dt_txt | date}}
+    </div> -->
+    <div class="card-deck">
+    <!-- <div> -->
+      <weather-detail-item *ngFor="let i of forecast.days" [forecastData]="i"></weather-detail-item>
+    </div>
 </div>
+
+<ng-template #loading>
+  <div class="centered">
+    <div class="loader"></div>
+  </div>
+</ng-template>
