--- a/src/app/components/weather-detail/weather-detail.component.scss
+++ b/src/app/components/weather-detail/weather-detail.component.scss
@@ -19,3 +19,32 @@
     width: 100vw;
     justify-content: center;
   }
+
+  .background {
+    background: linear-gradient(325deg, rgb(70, 128, 148) 0%, rgb(22, 97, 196) 100%);
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+  }
+
+  a.btn {
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+
+  a.btn:link {
+    text-decoration: inherit;
+    color: inherit;
+}
+
+a.btn:visited {
+    text-decoration: inherit;
+    color: inherit;
+}
+
+a.btn:hover {
+  color: grey;
+}
